--- a/index.html
+++ b/index.html
@@ -455,21 +455,15 @@
             position: absolute;
             top: 8px;
             left: 8px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 6px;
-            border-radius: 8px;
             z-index: 10;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.4);
-            width: 32px;
-            height: 32px;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
         }
 
         .pinned-indicator svg {
-            width: 18px;
+            width: 14px;
             height: auto;
             display: block;
         }
