--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
         /* Icon Buttons Above Grid */
         .icon-buttons {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
+            gap: 80px;
             margin-bottom: 20px;
             padding: 0 20px;
         }
@@ -72,15 +73,15 @@
             background: none;
             border: none;
             cursor: pointer;
-            padding: 12px;
+            padding: 8px;
             border-radius: 8px;
             transition: all 0.2s;
             position: relative;
         }
 
         .icon-btn svg {
-            width: 28px;
-            height: 28px;
+            width: 20px;
+            height: 20px;
             display: block;
             fill: #000;
             transition: fill 0.2s;
@@ -749,9 +750,6 @@
             <button class="icon-btn" onclick="toggleSettingsDropdown()" title="More Options">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.25 34.74">
                     <g>
-                        <path d="M15.89,27.18c-.19-.08-.39-.12-.59-.12s-.4.04-.59.12c-.19.08-.36.19-.5.34-.15.15-.26.31-.34.51-.08.19-.12.39-.12.6s.04.41.12.6c.08.2.19.36.34.51.15.15.31.26.5.34.38.16.8.16,1.18,0,.19-.08.36-.19.5-.34.15-.15.26-.31.34-.51.08-.19.12-.39.12-.6s-.04-.4-.12-.6c-.08-.19-.19-.36-.34-.51-.15-.15-.31-.26-.5-.34Z"/>
-                        <path d="M9.33,9.57c.38.16.8.16,1.18,0,.19-.08.36-.19.5-.34.15-.15.26-.31.34-.51.08-.19.12-.39.12-.6s-.04-.4-.12-.6c-.08-.19-.19-.36-.34-.51-.15-.15-.31-.26-.5-.34-.19-.08-.39-.12-.59-.12s-.4.04-.59.12c-.19.08-.35.19-.5.34-.15.15-.26.31-.34.51-.08.19-.12.39-.12.6s.04.41.12.6c.08.2.19.36.34.51.15.15.31.26.5.34Z"/>
-                        <path d="M27.19,16.93c-.19-.08-.38-.12-.59-.12s-.4.04-.59.12c-.19.08-.36.19-.5.34-.15.15-.26.31-.34.51-.08.19-.12.39-.12.6s.04.41.12.6c.08.19.19.36.34.51.15.15.31.26.5.34.38.16.8.16,1.18,0,.19-.08.36-.19.5-.34.15-.15.26-.31.34-.51h0c.08-.19.12-.39.12-.6s-.04-.41-.12-.6c-.08-.19-.19-.36-.34-.51-.15-.15-.31-.26-.5-.34Z"/>
                         <path d="M.67,7.73c.21.21.46.38.73.49.28.12.57.18.88.18h2c.15.38.34.74.56,1.08.37.57.82,1.06,1.35,1.48.53.42,1.12.74,1.76.95.64.22,1.3.33,1.97.33s1.34-.11,1.97-.33c.64-.22,1.23-.54,1.76-.96.53-.42.99-.91,1.35-1.47.22-.34.41-.7.56-1.08h17.41c.3,0,.6-.06.87-.17.28-.11.52-.28.74-.5.21-.21.38-.46.49-.74.11-.28.17-.57.17-.87s-.06-.59-.17-.87c-.11-.28-.28-.53-.49-.74-.21-.21-.46-.38-.74-.49-.28-.12-.57-.17-.87-.17H15.57c-.15-.38-.34-.74-.56-1.08-.37-.56-.82-1.06-1.35-1.48-.53-.41-1.12-.74-1.76-.96-1.27-.44-2.67-.44-3.95,0-.63.22-1.23.54-1.76.96-.53.41-.99.91-1.35,1.47-.22.34-.41.7-.56,1.08h-2c-.3,0-.59.06-.87.17s-.53.28-.74.49c-.21.21-.38.46-.49.74-.12.28-.17.57-.17.87s.06.6.17.87c.11.28.28.53.49.74ZM8.38,6.12c0-.21.04-.41.12-.6.08-.19.19-.36.34-.51.15-.15.31-.26.5-.34.19-.08.39-.12.59-.12s.4.04.59.12c.19.08.35.19.5.34.15.15.26.31.34.51.08.2.12.39.12.6s-.04.41-.12.6c-.08.2-.19.36-.34.51-.15.15-.31.26-.5.34-.38.16-.8.16-1.18,0-.19-.08-.36-.19-.5-.34-.15-.15-.26-.31-.34-.51-.08-.19-.12-.39-.12-.6Z"/>
                         <path d="M34.59,27.01h0c-.21-.22-.46-.38-.74-.5-.28-.12-.57-.17-.87-.17h-12.03c-.15-.38-.34-.74-.56-1.08-.37-.56-.82-1.06-1.35-1.48-.53-.41-1.12-.74-1.76-.96-1.27-.44-2.67-.44-3.95,0-.64.22-1.23.54-1.76.96-.53.41-.99.91-1.35,1.47-.22.34-.41.7-.56,1.08H2.28c-.3,0-.59.06-.87.17s-.53.28-.74.49c-.21.21-.38.46-.49.74-.12.28-.17.57-.17.88s.06.6.17.87c.12.28.28.53.49.74.21.21.46.38.74.5s.57.17.87.17h7.38c.15.38.34.74.56,1.08.37.56.82,1.06,1.35,1.48.53.41,1.12.74,1.76.96.64.22,1.3.33,1.97.33s1.34-.11,1.97-.33c.64-.22,1.23-.54,1.76-.96.53-.42.99-.91,1.35-1.47.22-.34.41-.7.56-1.08h12.03c.3,0,.59-.06.87-.17.28-.11.52-.28.74-.5.21-.21.38-.46.49-.74.11-.28.17-.57.17-.87s-.06-.59-.17-.87c-.11-.28-.28-.53-.49-.74ZM16.85,28.62c0,.21-.04.4-.12.6-.08.19-.19.36-.34.51-.15.15-.31.26-.5.34-.38.16-.8.16-1.18,0-.19-.08-.36-.19-.5-.34-.15-.15-.26-.31-.34-.51-.08-.19-.12-.39-.12-.6s.04-.41.12-.6c.08-.2.19-.36.34-.51.15-.15.31-.26.5-.34.19-.08.38-.12.59-.12s.4.04.59.12c.19.08.36.19.5.34.15.15.26.31.34.51.08.2.12.39.12.6Z"/>
                         <path d="M34.59,15.76h0c-.21-.21-.46-.38-.74-.5-.28-.12-.57-.17-.87-.17h-.73c-.15-.38-.34-.74-.56-1.08-.37-.56-.82-1.06-1.35-1.48-.53-.41-1.12-.73-1.76-.95-1.27-.44-2.67-.44-3.95,0-.64.22-1.23.54-1.76.96-.53.42-.99.91-1.35,1.48-.22.34-.41.7-.56,1.08H2.28c-.3,0-.59.06-.88.17-.28.12-.53.28-.73.49-.21.21-.38.46-.49.74-.12.28-.17.57-.17.87s.06.6.17.87c.12.28.28.53.49.74.21.21.46.38.74.5.28.12.57.17.87.17h18.68c.15.38.34.74.56,1.08.37.56.82,1.06,1.35,1.48.53.42,1.12.74,1.76.95.64.22,1.3.33,1.97.33s1.34-.11,1.97-.33c.63-.22,1.23-.54,1.76-.96.53-.41.99-.91,1.35-1.47.22-.34.41-.7.56-1.08h.73c.3,0,.59-.06.87-.17.28-.11.52-.28.74-.5.21-.21.38-.46.49-.74.11-.28.17-.57.17-.87s-.06-.59-.17-.87c-.11-.28-.28-.53-.49-.74ZM28.15,17.37c0,.21-.04.41-.12.6h0c-.08.19-.19.36-.34.51-.15.15-.31.26-.5.34-.38.16-.8.16-1.18,0-.19-.08-.36-.19-.5-.34-.15-.15-.26-.31-.34-.51-.08-.2-.12-.39-.12-.6s.04-.4.12-.6c.08-.2.19-.36.34-.51.15-.15.31-.26.5-.34.19-.08.39-.12.59-.12s.4.04.59.12c.19.08.36.19.5.34.15.15.26.31.34.51.08.19.12.39.12.6Z"/>
