--- a/index.html
+++ b/index.html
@@ -1340,8 +1340,7 @@
                         type: finalType, 
                         slideCount: slideUrls.length,
                         visible: visible,
-                        pinned: pinned,
-                        supportsIframes: SUPPORTS_IFRAMES
+                        pinned: pinned
                     });
                     
                     return {
