--- a/index.html
+++ b/index.html
@@ -368,21 +368,8 @@
             width: 100%;
             height: 100%;
             border: none;
-            pointer-events: auto;
+            pointer-events: none;
             -webkit-transform: translate(-50%, -50%);
-        }
-
-        /* Overlay to block fullscreen button clicks */
-        .grid-item.has-canva::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 50px;
-            height: 50px;
-            background: transparent;
-            z-index: 5;
-            pointer-events: all;
         }
 
         .grid-item.drag-mode iframe {
@@ -686,6 +673,7 @@
             max-height: 90vh;
             object-fit: contain;
             border-radius: 8px;
+            pointer-events: auto;
         }
 
         .lightbox-content iframe {
