--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,8 @@
                 iframe.src = url;
                 iframe.loading = 'lazy';
                 iframe.setAttribute('allowfullscreen', 'true');
-                iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture');
+                // Only allow fullscreen - other permissions cause warnings
+                iframe.setAttribute('allow', 'fullscreen');
                 iframe.style.cssText = 'width:100%;height:100%;border:none;';
                 
                 console.log('Creating Canva iframe:', url);
