--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@ const media = createMediaElement(processedSlideUrl, img.name, true, apiUrl, apiK
             const match = url.match(/canva\.com\/design\/([^\/\?]+)/);
             if (match && match[1]) {
                 // Use the ?embed parameter - this works on mobile/Safari/iOS!
-                return `https://www.canva.com/design/${match[1]}/view?embed`;
+                return `https://www.canva.com/design/${match[1]}/view?embed&ui=eyJBIjp7fX0`;
             }
             
             // If it's a /view URL without embed, add it
@@ -1568,7 +1568,7 @@ const media = createMediaElement(processedSlideUrl, img.name, true, apiUrl, apiK
                 iframe.loading = 'lazy';
                 iframe.setAttribute('allowfullscreen', 'true');
                 // Only allow fullscreen - other permissions cause warnings
-                iframe.setAttribute('allow', 'fullscreen');
+                iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture');
                 iframe.style.cssText = 'width:100%;height:100%;border:none;';
                 
                 console.log('Creating Canva iframe:', url);
