--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
             <div id="status"></div>
             <div class="input-group">
                 <label for="apiUrl">API Endpoint URL:</label>
-                <input type="text" id="apiUrl" placeholder="https://your-project.vercel.app/api/notion" value="https://grid-three-iota.vercel.app/api/notion">
+                <input type="text" id="apiUrl" placeholder="https://igwidget.thrivingactually.com/api/notion" value="https://igwidget.thrivingactually.com/api/notion">
             </div>
             <div class="input-group">
                 <label for="databaseId">Database ID:</label>
