--- a/index.html
+++ b/index.html
@@ -126,13 +126,18 @@
         }
 
         .icon-btn.saving svg {
-            animation: shimmer 1.5s infinite;
+            animation: shimmer 0.6s ease-in-out infinite;
         }
 
         @keyframes shimmer {
-            0% { opacity: 1; }
-            50% { opacity: 0.3; }
-            100% { opacity: 1; }
+            0%, 100% { 
+                opacity: 1;
+                transform: scale(1);
+            }
+            50% { 
+                opacity: 0.2;
+                transform: scale(0.95);
+            }
         }
 
         .icon-btn:hover {
