--- a/index.html
+++ b/index.html
@@ -126,17 +126,36 @@
         }
 
         .icon-btn.saving svg {
-            animation: shimmer 0.6s ease-in-out infinite;
+            animation: shimmer 0.5s ease-in-out infinite;
         }
 
+        /* Light mode shimmer */
         @keyframes shimmer {
             0%, 100% { 
                 opacity: 1;
+                fill: #000;
                 transform: scale(1);
             }
             50% { 
                 opacity: 0.2;
-                transform: scale(0.95);
+                fill: #ccc;
+                transform: scale(0.85);
+            }
+        }
+
+        /* Dark mode shimmer */
+        @media (prefers-color-scheme: dark) {
+            @keyframes shimmer {
+                0%, 100% { 
+                    opacity: 1;
+                    fill: #fff;
+                    transform: scale(1);
+                }
+                50% { 
+                    opacity: 0.2;
+                    fill: #666;
+                    transform: scale(0.85);
+                }
             }
         }
 
