--- a/index.html
+++ b/index.html
@@ -12,36 +12,43 @@
             box-sizing: border-box;
         }
 
-        /* Scrollbar styling for light mode */
+        /* Scrollbar styling for light mode - match OS style */
         ::-webkit-scrollbar {
             width: 12px;
         }
 
         ::-webkit-scrollbar-track {
-            background: #f1f1f1;
+            background: transparent;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #888;
+            background: rgba(0, 0, 0, 0.2);
             border-radius: 6px;
+            border: 2px solid transparent;
+            background-clip: padding-box;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: #555;
+            background: rgba(0, 0, 0, 0.35);
+            background-clip: padding-box;
         }
 
         /* Scrollbar styling for dark mode */
         @media (prefers-color-scheme: dark) {
             ::-webkit-scrollbar-track {
-                background: #2d2d2d;
+                background: transparent;
             }
 
             ::-webkit-scrollbar-thumb {
-                background: #555;
+                background: rgba(255, 255, 255, 0.3);
+                border-radius: 6px;
+                border: 2px solid transparent;
+                background-clip: padding-box;
             }
 
             ::-webkit-scrollbar-thumb:hover {
-                background: #777;
+                background: rgba(255, 255, 255, 0.5);
+                background-clip: padding-box;
             }
         }
 
