--- a/index.html
+++ b/index.html
@@ -344,10 +344,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 14px;
-            color: white;
-            font-weight: bold;
+            padding: 5px;
             flex-shrink: 0;
+        }
+        
+        .config-branding-logo svg {
+            width: 100%;
+            height: auto;
         }
 
         .config-branding-text h4 {
@@ -856,7 +859,7 @@
             height: 100%;
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.15);
             z-index: 9999;
             align-items: center;
             justify-content: center;
@@ -988,7 +991,16 @@
             <div class="config-branding">
                 <div class="config-branding-content">
                     <div class="config-branding-info">
-                        <div class="config-branding-logo">TA</div>
+                        <div class="config-branding-logo">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55.35 33.9" style="width: 24px; height: auto; fill: white;">
+                                <g>
+                                    <path d="M48.9,8.13l2.64-.07c1.28-.06,2.55-.2,3.81-.4-1.26-.21-2.53-.34-3.81-.4-.88-.07-1.76-.11-2.64-.11.44-.48.88-.92,1.28-1.43.71-.77,1.35-1.59,1.94-2.45-.89.55-1.72,1.19-2.49,1.9-.51.4-.95.84-1.43,1.28,0-.88-.04-1.76-.11-2.64-.06-1.28-.2-2.55-.4-3.81-.2,1.26-.34,2.53-.4,3.81-.04.88-.07,1.76-.07,2.64l-1.43-1.28c-.77-.71-1.61-1.34-2.49-1.9.59.86,1.22,1.67,1.9,2.45l1.28,1.43-2.6.11c-1.28.06-2.55.19-3.81.4,1.26.21,2.53.34,3.81.4l2.6.07-1.28,1.43c-.68.79-1.32,1.62-1.9,2.49.87-.59,1.7-1.22,2.49-1.9l1.43-1.28c0,.88.04,1.72.07,2.6.06,1.28.19,2.55.4,3.81.22-1.24.33-2.53.44-3.81.11-1.28.07-1.72.07-2.6l1.43,1.28c.78.69,1.62,1.33,2.49,1.9-.58-.88-1.23-1.71-1.94-2.49l-1.28-1.43Z"/>
+                                    <path d="M6.11,23.51l1.83-.05c.88-.04,1.76-.14,2.64-.28-.87-.14-1.75-.24-2.64-.28-.61-.05-1.22-.08-1.83-.08.3-.33.61-.63.89-.99.49-.53.94-1.1,1.34-1.7-.62.38-1.19.82-1.72,1.32-.36.28-.66.58-.99.89,0-.61-.02-1.22-.08-1.83-.04-.88-.14-1.76-.28-2.64-.14.87-.24,1.75-.28,2.64-.02.61-.05,1.22-.05,1.83l-.99-.89c-.54-.49-1.11-.93-1.73-1.32.41.59.85,1.16,1.32,1.7l.89.99-1.8.08c-.88.04-1.76.13-2.64.28.87.14,1.75.24,2.64.28l1.8.05-.89.99c-.47.55-.91,1.12-1.32,1.73.6-.41,1.18-.85,1.73-1.32l.99-.89c0,.61.02,1.19.05,1.8.04.88.13,1.76.28,2.64.15-.86.23-1.75.3-2.64.08-.89.05-1.19.05-1.8l.99.89c.54.48,1.12.92,1.72,1.32-.4-.61-.85-1.18-1.34-1.73l-.89-.99Z"/>
+                                    <path d="M26,13.83l.22.04c.27-3.43.89-7.7,1.83-11.13H3.47c.93,3.43,1.51,7.7,1.83,11.13l.22-.04c.71-2.94,1.02-7.83,7.3-10.46.31,4.5.31,10.64.31,15.13,0,7.34-.13,13.31-2.67,15.04l.04.36h10.5l.04-.36c-2.49-1.56-2.63-7.7-2.63-15.04,0-4.5,0-10.64.31-15.13,6.19,2.63,6.59,7.48,7.25,10.46Z"/>
+                                    <path d="M40.82,17.66c-1.65-5.56-2.89-9.88-3.87-15.13h-3.12c-1.29,5.83-3.07,13-4.58,18.92-2.36,9.44-3.47,10.1-5.61,12.11l.04.36h6.36l.04-.36c-1.6-1.2-1.69-2.8-1.07-6.1.62-2.76,5.39-4.05,7.17-4.05.93,3.83,2.09,8.41.04,10.15l.04.36h11.39l.04-.36c-1.91-.45-3.96-5.79-6.9-15.89ZM29.51,25.18l3.47-13.44,2.76,9.97c-2,.22-5.25,1.51-6.23,3.47Z"/>
+                                </g>
+                            </svg>
+                        </div>
                         <div class="config-branding-text">
                             <h4>Instagram Grid Widget</h4>
                             <p>© 2025 thriving, actually</p>
